--- a/academic.html
+++ b/academic.html
@@ -8,14 +8,26 @@
 </head>
 <body>
   <div class="card">
-<img src="img.jpg" alt="John" style="width:100%">
-<h1>My Academic Award</h1>
-<p class="title">CEO & Founder, Example</p>
-<p>Harvard University</p>
-<a href="#"><i class="fa fa-dribbble"></i></a>
-<a href="#"><i class="fa fa-twitter"></i></a>
-<a href="#"><i class="fa fa-linkedin"></i></a>
-<a href="#"><i class="fa fa-facebook"></i></a>
+<img src="https://www.montfort.ac.th/images/MC_logo.png" alt="" style="width:10%">
+<h1>Academic Award</h1>
+<p class="title">ผลงานวิชาการ</p><br>
+<h3>TIMO Thailand International Mathematical Olympiad Heat Round 2019 -2020</h3>
+<img src="http://swis.montfort.ac.th//files/temp_pic/big_picture/2563/SGzdV0mX9a.jpg" alt="" style="width:40%"><br>
+
+<h3>Southeast Asian Mathematical Olympiad (SEAMO) 2019</h3>
+<img src="http://swis.montfort.ac.th//files/temp_pic/big_picture/2563/RX7KOorS74.jpg" alt="" style="width:40%"><br>
+
+<h3>ผลการสอบแข่งขันชิงแชมป์การคิดและแก้ปัญหาคณิตศาสตร์ ครั้งที่ 20 2019</h3>
+<img src="http://swis.montfort.ac.th//files/temp_pic/big_picture/2563/bgZIrOFsvQ.jpg" alt="" style="width:40%"><br>
+
+<h3>รางวัลรองชนะเลิศอันดับ 1 การแข่งขันรู้เฟื่องเรื่องภาษาไทย ระดับชั้นมัธยมศึกษาตอนปลาย</h3>
+<img src="http://swis.montfort.ac.th//files/temp_pic/big_picture/2563/5ZiYCMZUwO.jpg" alt="" style="width:40%"><br>
+
+<h3>รางวัลชนะเลิศ การแข่งขันรู้เฟื่องเรื่องภาษาไทย ระดับชั้นมัธยมศึกษาตอนต้น</h3>
+<img src="http://swis.montfort.ac.th//files/temp_pic/big_picture/2563/oSwA2H2WyR.jpg" alt="" style="width:40%"><br>
+
+<h3>รางวัลเหรียญทอง ภาษาอังกฤษ จากการแข่งขันคณิตศาสตร์ วิทยาศาสตร์ และภาษาอังกฤษ ประจำปี 2019</h3>
+<img src="http://swis.montfort.ac.th//files/temp_pic/big_picture/2563/0pfiuV5w3N.jpg" alt="" style="width:40%"><br>
 <p><a href="index.html"><button>Home</button></p></a>
 
 </div>
