--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
   <div class="card">
-<img src="https://www.montfort.ac.th/images/MC_logo.png" alt="John" style="width:10%">
-<h1>Welcome to my website</h1>
-<p class="title">Kad</p>
-<p>Montfort College</p>
+<img src="https://www.montfort.ac.th/images/MC_logo.png" alt="" style="width:10%">
+<h1>Welcome to Montfort College</h1>
+<p class="title">ยินดีต้อนรับสู่โรงเรียนมงฟอร์ตวิทยาลัย</p>
+<p>by Niranara Insao M.4/9 No.22 </p>
 <a href="#"><i class="fa fa-dribbble"></i></a>
 <a href="#"><i class="fa fa-twitter"></i></a>
 <a href="#"><i class="fa fa-linkedin"></i></a>
