--- a/history.html
+++ b/history.html
@@ -86,7 +86,7 @@
 <a href="#"><i class="fa fa-twitter"></i></a>
 <a href="#"><i class="fa fa-linkedin"></i></a>
 <a href="#"><i class="fa fa-facebook"></i></a>
-<p><a href="index.html"><button>Home</button></p></a>
+<p><a href="index.html"><button>Home</button></a></p>
 
 </div>
 </body>
